deploy/kubernetes/overlays/tls/manager-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsp-manager
  namespace: fabric-shortcut-proxy
spec:
  template:
    spec:
      containers:
        - name: manager
          readinessProbe:
            httpGet:
              scheme: HTTPS
          livenessProbe:
            httpGet:
              scheme: HTTPS
          volumeMounts:
            - name: manager-tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: manager-tls
          secret:
            secretName: fsp-manager-tls
