deploy/kubernetes/overlays/tls/manager-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsp-manager
  namespace: fabric-shortcut-proxy
spec:
  ports:
    - $patch: replace
    - name: control
      port: 9443
      targetPort: control
